Fix text alignment and font size in .info h1
Corrected text alignment and font size properties to use !important.

--- a/css/Style.css
+++ b/css/Style.css
@@ -1017,8 +1017,8 @@ header .socials a {
   }
 
   .info h1{
-    text-aligh: center;
-    font-size: 25px;
+    text-aligh: center!important;
+    font-size: 25px!important;
   }
 }
 @media screen and (max-width: 768px) {
